Added link to relevant Netflix microservices talk

--- a/05-biz_models/05-slides.html
+++ b/05-biz_models/05-slides.html
@@ -222,6 +222,10 @@ background-image: url(images/deargithub2.png)
 ---
 ![](images/simian2.png)
 ---
+## For more information about the Simian Army, you can watch Microservices at Netflix Scale: Principles, Tradeoffs and Lessons Learned
+### https://www.youtube.com/watch?v=57UK46qfBLY
+
+---
 ![](images/simian3.png)
 ---
 ## Chaos Engineering is the discipline of experimenting on a distributed system in order to build confidence in the system’s capability to withstand turbulent conditions in production.
