--- a/02-history_future/02-slides.html
+++ b/02-history_future/02-slides.html
@@ -205,7 +205,7 @@ background-image: url(images/mailarch.jpg)
 # Quick Aside on Email Architecture
 
 * MUA: mail user agent: thunderbird, outlook,
-* MRA: mail retrevial agent: **fetchmail**, built into thunderbird
+* MRA: mail retrieval agent: **fetchmail**, built into thunderbird
 * MAA: mail access agent: imapd
 * MSA: mail submission agent: postfix, sendmail
 * MTA: mail transfer agent: postfix, sendmail
