--- a/07-opensource_langs/07-slides.html
+++ b/07-opensource_langs/07-slides.html
@@ -369,7 +369,7 @@ class: center, middle
 background-image: url(images/gohater.png)
 
 ---
-## The key point here is our programmers are Googlers, they’re not researchers. They’re typically, fairly young, fresh out of school, probably learned Java, maybe learned C or C++, probably learned Python. They’re not capable of understanding a brilliant language but we want to use them to build good software. So, the language that we give them has to be easy for them to understand and easy to adopt.
+## The key point here is our programmers are Googlers, they’re not researchers. They’re typically, fairly young, fresh out of school, probably learned Java, maybe learned C or C++, probably learned Python. They’re not capable of understanding a brilliant language, but we want to use them to build good software. So, the language that we give them has to be easy for them to understand and easy to adopt.
 
 ## - Rob Pike
 ---
