blog which is useful about how to make a system resilient for failures

--- a/06-using_opensource/06-slides.html
+++ b/06-using_opensource/06-slides.html
@@ -163,6 +163,12 @@ class: center, middle
 # 1) Fail silent
 # 2) Fail fast 
 # 3) Custom fallback
+        
+Reference:
+        Blog about to make the project resilient to the failures of the other systems using Hystrix.
+
+https://lab.getbase.com/embracing-failure-with-hystrix/
+        
 ---
 background-image: url(images/hystrixdash0.png)
 ---
