Added quote about failure

--- a/02-history_future/02-slides.html
+++ b/02-history_future/02-slides.html
@@ -238,6 +238,9 @@ background-image: url(images/candb.jpg)
 # *The Cathedral and the Bazaar*
 
 # 3. Plan to throw one [version] away; you will, anyhow.
+
+### "One thing about open source is that even the failures contribute to the next thing that comes up. Unlike a company that could spend a million dollars in two years and fail and there's nothing really to show for it, if you spend a million dollars on open source, you probably have something amazing that other people can build on." -Matt Mullenweg
+
 ---
 # *The Cathedral and the Bazaar*
 
