Added link for Amazon S3 outage postmortem

--- a/13-projects2/13-slides.html
+++ b/13-projects2/13-slides.html
@@ -173,6 +173,10 @@ background-image: url(images/s3-07.png)
 ---
 background-image: url(images/s3-08.png)
 ---
+### The Amazon S3 outage : The postmortem
+[Why it happened](https://aws.amazon.com/message/41926/?tag=bisafetynet-20)
+
+---
 background-image: url(images/s3-08a.png)
 ---
 background-image: url(images/s3-08b.png)
