HW1 - Added a website which helps in exploring open source projects for first timers

--- a/10-projects/10-slides.html
+++ b/10-projects/10-slides.html
@@ -391,6 +391,9 @@ background-image: url(images/ideas6.png)
 ---
 background-image: url(images/ideas7.png)
 ---
+## For more open source project ideas:
+![](images/UpForGrabs.JPG)
+---
 # Lightweight Project Notes
 
 --
