Homework-1.Name-Ishan Shah

--- a/07-opensource_langs/07-slides.html
+++ b/07-opensource_langs/07-slides.html
@@ -16,7 +16,7 @@
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
     </style>
     <style type="text/css">
-	.remark-slide-content { 
+	.remark-slide-content {
 		background-size: 100% 100%;
 	}
 	.invert {
@@ -25,13 +25,13 @@
 	.footnote {
 		position: absolute;
 		bottom: 3em;
-		color: #f06; 
+		color: #f06;
 	}
 	img {
 		width: 100%;
 	}
 	.hero {
-		color: #22a; 
+		color: #22a;
 		background-color: #eee;
 		padding: 4px;
 		font-size: 100px;
@@ -180,7 +180,7 @@ class: center, middle
 class: center, middle
 # Good Design...
 
-# Is honest 
+# Is honest
 ### It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.
 ---
 class: center, middle
@@ -488,6 +488,23 @@ func main() {
 ```
 
 ---
+
+# Good Resources for GO
+```
+
+Intro and priliminary tour: https://tour.golang.org/welcome/4
+
+
+
+For compiling and running the code online from browser: https://play.golang.org
+
+
+
+Book - The Go Programming Language (By Alan A. A. Donovan, Brian W. Kernighan)
+```
+
+---
+
 class: center, middle
 # Next Week:
 # Successful Open Source Projects
