Fixed Typos in Project Statement and HW1
1- I fixed some typos in my project statement and changed my project
name.
2- Added a slide to the 3/13 slides about a comparison between Paxos
and Raft.

--- a/16-best_practices/16-slides.html
+++ b/16-best_practices/16-slides.html
@@ -137,6 +137,10 @@ background-image: url(images/raft1.png)
 ## 1988, consensus in a broad family of "partially synchronous" systems
 # Leader Election, log repl
 ---
+background-image: url(images/raft-userstudy.png)
+???
+# reference: https://ramcloud.stanford.edu/~ongaro/userstudy/graphs.pdf
+---
 background-image: url(images/vault.png)
 ---
 background-image: url(images/keywhiz.png)
