--- a/18-microservices_devops/18-slides.html
+++ b/18-microservices_devops/18-slides.html
@@ -16,7 +16,7 @@
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
     </style>
     <style type="text/css">
-	.remark-slide-content { 
+	.remark-slide-content {
 		background-size: 100% 100%;
 	}
 	.invert {
@@ -25,13 +25,13 @@
 	.footnote {
 		position: absolute;
 		bottom: 3em;
-		color: #f06; 
+		color: #f06;
 	}
 	img {
 		width: 100%;
 	}
 	.hero {
-		color: #22a; 
+		color: #22a;
 		background-color: #eee;
 		padding: 4px;
 		font-size: 100px;
@@ -96,7 +96,7 @@ class: center
 background-image: url(images/conway1.png)
 
 ---
-## Conway's law ... is a consequence of the fact that two software modules A and B cannot interface correctly with each other unless the designer and implementer of A communicates with the designer and implementer of B. 
+## Conway's law ... is a consequence of the fact that two software modules A and B cannot interface correctly with each other unless the designer and implementer of A communicates with the designer and implementer of B.
 
 ## Thus the interface structure of a software system necessarily will show a congruence with the social structure of the organization that produced it. - Wikipedia
 ---
@@ -176,7 +176,7 @@ background-image: url(images/amzn2.png)
 ---
 # Steve Yegge Google Platforms Rant
 
-### The Golden Rule of Platforms, "Eat Your Own Dogfood", can be rephrased as "Start with a Platform, and Then Use it for Everything." 
+### The Golden Rule of Platforms, "Eat Your Own Dogfood", can be rephrased as "Start with a Platform, and Then Use it for Everything."
 ### You can't cheat!
 ### You can't have secret back doors for internal apps to get special priority access, not for ANY reason.
 ### You need to solve the hard problems up front.
@@ -206,7 +206,7 @@ background-image: url(images/cont2.png)
 # 1. Control Groups
 # 2. Namespaces
 # 3. IPtables
-# 4. CoW Filesystem 
+# 4. CoW Filesystem
 
 ---
 # Control Groups
@@ -269,11 +269,11 @@ background-image: url(images/fork3.png)
 ---
 ## When Docker was first introduced to us in early 2013, the idea of a “standard container” was striking and immediately attractive: a simple component, a composable unit, that could be used in a variety of systems.
 
-## Unfortunately, a simple re-usable component is not how things are playing out. 
+## Unfortunately, a simple re-usable component is not how things are playing out.
 
 ---
 
-## Docker now is building tools for launching cloud servers, systems for clustering, and a wide range of functions: building images, running images, uploading, downloading, and eventually even overlay networking, all compiled into one monolithic binary running primarily as root on your server. 
+## Docker now is building tools for launching cloud servers, systems for clustering, and a wide range of functions: building images, running images, uploading, downloading, and eventually even overlay networking, all compiled into one monolithic binary running primarily as root on your server.
 
 --
 
@@ -354,6 +354,12 @@ background-image: url(images/gh_lic3.png)
 background-image: url(images/gh_lic.png)
 ---
 background-image: url(images/gh_lic2.png)
+---
+background-image: url(images/gh_lic4.png)
+---
+background-image: url(images/gh_lic5.png)
+---
+background-image: url(images/gh_lic6.png)
 
 ---
 # CONTRIBUTING
@@ -437,7 +443,7 @@ background-image: url(images/gh_write.png)
 class: center, middle
 
 # Homework 3: Due 4/10
-# Wednesday: DevOps & Automation 
+# Wednesday: DevOps & Automation
 
     </textarea>
     <script src="../remark.min.js" type="text/javascript"></script>
