--- a/18-microservices_devops/18-slides.html
+++ b/18-microservices_devops/18-slides.html
@@ -360,6 +360,8 @@ background-image: url(images/gh_lic4.png)
 background-image: url(images/gh_lic5.png)
 ---
 background-image: url(images/gh_lic6.png)
+---
+background-image: url(images/gh_rank.png)
 
 ---
 # CONTRIBUTING
