adding project idea resources

--- a/13-projects2/13-slides.html
+++ b/13-projects2/13-slides.html
@@ -213,6 +213,15 @@ background-image: url(images/mission2.png)
 ---
 background-image: url(images/mission3.png)
 ---
+#Useful resources for project ideas
+[Up For Grabs](http://up-for-grabs.net) - listing of beginner-friendly projects in need of contributors
+
+[Your First PR](http://yourfirstpr.github.io/) - Blog to help guide first contributions
+
+[GitHub Explore](https://github.com/explore) - Showcases various opens source projects on GitHub
+
+[Code Triage](https://www.codetriage.com/) - Set alerts to notify of new issues in relevant repositories
+---
 background-image: url(images/ideas01.png)
 ---
 background-image: url(images/ideas02.png)
