--- a/23-automation/23-slides.html
+++ b/23-automation/23-slides.html
@@ -305,6 +305,16 @@ background-image: url(images/test10.png)
 ---
 background-image: url(images/test11.png)
 ---
+# Load Testing
+## "A load test allows the tester to perfectly measure the response time, throughput and resource utilisation to understand the breaking point of the system under test, based on an assumption that the breaking point occurs below peak load condition."
+---
+background-image: url(images/test12.png)
+---
+# Fuzz Testing
+## "Fuzz testing or Fuzzing is a Black Box software testing technique, which basically consists in finding implementation bugs using invalid/malformed/random data injection in an automated fashion."
+---
+background-image: url(images/test13.png)
+---
 ## "Testing is one of the most profitable investments engineers can make to improve the reliability of their product. Testing isn’t an activity that happens once or twice in the lifecycle of a project; it’s continuous. The amount of effort required to write good tests is substantial, as is the effort to build and maintain infrastructure that promotes a strong testing culture. You can’t fix a problem until you understand it, and in engineering, you can only understand a problem by measuring it. "
 ---
 # API Design Notes
