make quote citations consistent, fix typo, fix image reference

--- a/23-automation/23-slides.html
+++ b/23-automation/23-slides.html
@@ -106,7 +106,7 @@ background-image: url(images/pipeline3.png)
 # Patterns for Low-Risk Releases
 ## Decouple Deployment and Release. Releasing new versions of your system shouldn’t require downtime. 
 ---
-# "Facebook pages would make connections to the chat servers, query for presence information and simulate message sends without a single UI element drawn on the page."
+# "Facebook pages would make connections to the chat servers, query for presence information and simulate message sends without a single UI element drawn on the page." -- Eugene Letuchy, _Facebook Engineer_
 ---
 # Patterns for Low-Risk Releases
 ## Focus on Reducing Batch Size. Counterintuitively, deploying to production more frequently actually reduces the risk of release when done properly, simply because the amount of change in each deployment is smaller. 
@@ -206,17 +206,17 @@ background-image: url(images/iac1.png)
 ---
 background-image: url(images/rollback.png)
 ---
-# "The fundamental problem with rolling back to an old version is that web applications are not self-contained, and therefore they do not have versions. They have a current state. The state consists of the application code and everything that it interacts with. Databases, caches, browsers, and concurrently-running copies of itself." - Dan McKinley
+# "The fundamental problem with rolling back to an old version is that web applications are not self-contained, and therefore they do not have versions. They have a current state. The state consists of the application code and everything that it interacts with. Databases, caches, browsers, and concurrently-running copies of itself." -- Dan McKinley
 ---
 background-image: url(images/rollback1.png)
 ---
-# "You can roll back the SHA the webservers are running, but you can’t roll back what they’ve inflicted on everything else in the system. Well, not without a time machine. If you have a time machine, please use the time machine. Otherwise, the remediation has to occur in the direction of the future." - Dan McKinley
+# "You can roll back the SHA the webservers are running, but you can’t roll back what they’ve inflicted on everything else in the system. Well, not without a time machine. If you have a time machine, please use the time machine. Otherwise, the remediation has to occur in the direction of the future." -- Dan McKinley
 ---
 background-image: url(images/rollback2.png)
 ---
 background-image: url(images/rollback3.png)
 ---
-# If you haven't tried it, assume it's broken." - Unknown
+# "If you haven't tried it, assume it's broken." -- Unknown
 
 ???
 # TTT: 35
@@ -225,7 +225,7 @@ background-image: url(images/rollback3.png)
 
 
 ---
-# One key responsibility of software engineeers is to quantify confidence in the systems they build and maintain.
+# One key responsibility of software engineers is to quantify confidence in the systems they build and maintain.
 ---
 # Confidence can be measured both by past reliability and future reliability. 
 
@@ -272,7 +272,7 @@ background-image: url(images/testpyr.png)
 background-image: url(images/testcone.png)
 
 ---
-## "I always argue that high-level tests are there as a second line of test defense. If you get a failure in a high level test, not just do you have a bug in your functional code, you also have a missing or incorrect unit test. Thus I advise that before fixing a bug exposed by a high level test, you should replicate the bug with a unit test. Then the unit test ensures the bug stays dead." - Martin Fowler
+## "I always argue that high-level tests are there as a second line of test defense. If you get a failure in a high level test, not just do you have a bug in your functional code, you also have a missing or incorrect unit test. Thus I advise that before fixing a bug exposed by a high level test, you should replicate the bug with a unit test. Then the unit test ensures the bug stays dead." -- Martin Fowler
 
 ---
 background-image: url(images/testpyr2.png)
@@ -394,7 +394,7 @@ background-image: url(images/swag3.png)
 ---
 background-image: url(images/micro1.jpg)
 ---
-background-image: url(images/mm.png)
+background-image: url(images/mm0.png)
 ---
 # Micro-monolith Anti-Patterns
 
@@ -421,7 +421,7 @@ background-image: url(images/mm.png)
 ---
 # Micro-monolith on the database level
 
-## "Unfortunately, the most difficult task is to refactoring and splitting the monolith database (especially RDBMS).  Any modification of database model requires teams synchronization and potentially changing of many services, what should be abandoned."
+## "Unfortunately, the most difficult task is refactoring and splitting the monolith database (especially RDBMS).  Any modification of database model requires teams synchronization and potentially changing of many services, what should be abandoned."
 
 ---
 # Micro-monolith Testing
@@ -460,7 +460,7 @@ background-image: url(images/hill.png)
 
 ---
 class: center, middle
-# "People early in their career should learn from computer science:  meander some in your walk (especially early on), randomly drop yourself into new parts of the terrain, and when you find the highest hill, don’t waste any more time on the current hill no matter how much better the next step up might appear." - Chris Dixon
+# "People early in their career should learn from computer science:  meander some in your walk (especially early on), randomly drop yourself into new parts of the terrain, and when you find the highest hill, don’t waste any more time on the current hill no matter how much better the next step up might appear." -- Chris Dixon
 
 ---
 background-image: url(images/random.png)
